CI: update to compile with TSP package